Fix hero mobile spacing

--- a/styles/index.css
+++ b/styles/index.css
@@ -143,7 +143,7 @@ p {
 	background-attachment: scroll;
 	width: 100%;
 	height: auto;
-	padding: min(1.75em, 4%) min(1.5em, 4%);
+	padding: min(4.75em, 50%) min(1.5em, 4%);
 	box-sizing: border-box;
 }
 
@@ -168,7 +168,7 @@ p {
 
 .hero > .inner > .content {
 	display: flex;
-	flex-direction: column;
+	flex-direction: column-reverse;
 	justify-content: flex-end;
 	align-items: center;
 	width: 100%;
@@ -183,6 +183,7 @@ p {
 
 .hero > .inner > .content > .right {
 	width: 80%;
+	height: 10dvh;
 }
 
 .hero .cta-container > .subtext-xs,
